# crypto-file

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Cache.h  Crypto.h  CryptoStore.h  DirectoryStore.h  Exeptions.h  FileStore.h  SectionRecord.h  Sqlite3Store.h  Store.h
src/gui/: CMakeLists.txt  CfvApp.cpp  CfvApp.h  CfvDocument.cpp  CfvDocument.h  CfvMainFrame.cpp  CfvMainFrame.h  CfvPanel.cpp  CfvPanel.h  CfvView.cpp  CfvView.h  ChangePassDialog.h  Common.h  Defs.h  Utils.h  xgettext.list  xgettext.sh
src/gui/res/: icon.xcf  logo.xcf
src/gui/res/i18n/: CryptoFileViewer_en.po  CryptoFileViewer_zh.po  xrc_en.po  xrc_zh.po
test/: CMakeLists.txt  TestCache.cpp  TestFileStore.cpp
